--- a/front/MenuProf/CSS/Menu.css
+++ b/front/MenuProf/CSS/Menu.css
@@ -71,3 +71,9 @@ body {
   cursor: pointer;
   text-decoration: none;
 }
+
+@media (max-width: 768px) {
+  .menu-container {
+    grid-template-columns: 1fr;
+  }
+}
